tests/stacks/aws/application/istio-stack/test_data/expected/apiextensions.k8s.io_v1beta1_customresourcedefinition_dogstatsds.config.istio.io.yaml
apiVersion: apiextensions.k8s.io/v1beta1
kind: CustomResourceDefinition
metadata:
  annotations:
    helm.sh/resource-policy: keep
  labels:
    app: mixer
    istio: mixer-adapter
    package: dogstatsd
  name: dogstatsds.config.istio.io
spec:
  group: config.istio.io
  names:
    categories:
    - istio-io
    - policy-istio-io
    kind: dogstatsd
    plural: dogstatsds
    singular: dogstatsd
  scope: Namespaced
  version: v1alpha2
