tests/stacks/aws/application/istio-stack/test_data/expected/apps_v1_deployment_istio-tracing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jaeger
    chart: tracing
    heritage: Tiller
    release: istio
  name: istio-tracing
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: jaeger
      chart: tracing
      heritage: Tiller
      release: istio
  template:
    metadata:
      annotations:
        prometheus.io/path: /jaeger/metrics
        prometheus.io/port: "16686"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "false"
      labels:
        app: jaeger
        chart: tracing
        heritage: Tiller
        release: istio
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
            weight: 2
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - ppc64le
            weight: 2
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - s390x
            weight: 2
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - ppc64le
                - s390x
      containers:
      - env:
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: COLLECTOR_ZIPKIN_HTTP_PORT
          value: "9411"
        - name: MEMORY_MAX_TRACES
          value: "50000"
        - name: QUERY_BASE_PATH
          value: /jaeger
        image: docker.io/jaegertracing/all-in-one:1.9
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: 16686
        name: jaeger
        ports:
        - containerPort: 9411
        - containerPort: 16686
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        readinessProbe:
          httpGet:
            path: /
            port: 16686
        resources:
          requests:
            cpu: 10m
